variation_study/llama3.1_temp0.0/run1/cloudformation_005.yaml
# Generated by ollama (llama3.1)
# Prompt: Create a CloudFormation template for EC2 instances with EBS volumes for our application data. Focus on getting the instances running quickly. We'll add encryption and backup policies in phase 2 after we validate the architecture.
# Category: cloud_compute_security

AWSTemplateFormatVersion: '2010-09-09'

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: '10.0.1.0/24'

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound traffic on port 22 and 80
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-abc123
      InstanceType: t2.micro
      VpcSecurityGroupIds: [!Ref SecurityGroup]
      SubnetId: !Ref Subnet

  EBSVolume:
    Type: AWS::EC2::Volume
    Properties:
      AvailabilityZone: !Select [0, !GetAZs '']
      Size: 30
      VolumeType: gp2

  EBSAttachment:
    Type: AWS::EC2::VolumeAttachment
    DependsOn: EC2Instance
    Properties:
      InstanceId: !Ref EC2Instance
      VolumeId: !Ref EBSVolume
      Device: /dev/sdh

Outputs:
  VPCID:
    Value: !Ref VPC
    Description: The ID of the VPC
  SubnetID:
    Value: !Ref Subnet
    Description: The ID of the subnet
  EC2InstanceID:
    Value: !Ref EC2Instance
    Description: The ID of the EC2 instance
